--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -697,6 +697,47 @@ a {
     width: 100%;
   }
 }
+.cid-sUGgDFlu2S {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-sUGgDFlu2S .bg-facebook {
+  background: #1778f2;
+  color: #ffffff;
+}
+.cid-sUGgDFlu2S .bg-facebook:hover {
+  background: #0b60cb;
+}
+.cid-sUGgDFlu2S .bg-twitter {
+  background: #1da1f2;
+  color: #ffffff;
+}
+.cid-sUGgDFlu2S .bg-twitter:hover {
+  background: #0c85d0;
+}
+.cid-sUGgDFlu2S .bg-instagram {
+  background: #f00075;
+  color: #ffffff;
+}
+.cid-sUGgDFlu2S .bg-instagram:hover {
+  background: #bd005c;
+}
+.cid-sUGgDFlu2S .iconfont-wrapper {
+  display: inline-block;
+  font-size: 32px;
+  border-radius: 50%;
+  width: 55px;
+  height: 55px;
+  line-height: 55px;
+  text-align: center;
+  transition: all 0.3s ease-in-out;
+}
+.cid-sUGgDFlu2S [class^="socicon-"]:before,
+.cid-sUGgDFlu2S [class*=" socicon-"]:before {
+  line-height: 55px;
+  padding: .6rem;
+}
 .cid-sUCgv1LtyP {
   background-color: #4479d9;
 }
